--- a/app/assets/stylesheets/reset.css.scss
+++ b/app/assets/stylesheets/reset.css.scss
@@ -195,3 +195,9 @@ body { }
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing : border-box;
 }
+
+
+/* font-awesome annoyances */
+.fa-ul {
+  margin-left: 0;
+}
